--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,12 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+
 * {
-  box-sizing: border-box;
+  font-family: 'Inter', sans-serif;
   padding: 0;
   margin: 0;
 }
 
-html, body {
-  max-width: 100vw;
-  overflow-x: hidden;
+html {
+  
 }
 
 body {
