--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -1,11 +1,51 @@
 .container {
-    width: 1200px;
-    background: rgb(37, 40, 64);
-    padding: 10px;
-    border-radius: 8px;
-    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    position: sticky;
+    top: 0px;
+    right: 16px;
+    left: 16px;
+    background: linear-gradient(rgba(24,26,42) 30%, rgba(0,0,0,0) 70%);
 }
 
-.header {
+.navcontainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 1200px;
+    background: rgba(103, 109, 155, 0.1);
+    backdrop-filter: blur(8px);
+    margin: 16px 16px 0px 16px;
+    padding: 16px;
+    border-radius: 8px;
+    box-shadow: rgba(0, 0, 0, 0.335) 0px 8px 20px 4px;
+}
+
+.menuitems {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 24px;
+}
+
+.menuitem {
+    font-size: 12px;
+    font-weight: 700;
+    letter-spacing: 1.4px;
     color: white;
+    text-transform: uppercase;
+}
+
+.menubutton {
+    background: rgb(255, 58, 58);
+    font-size: 12px;
+    font-weight: 700;
+    letter-spacing: 1.4px;
+    color: white;
+    padding: 8px 32px;
+    border: 0px;
+    border-radius: 8px;
+    text-transform: uppercase;
 }
