--- a/src/styles/character.module.css
+++ b/src/styles/character.module.css
@@ -1,5 +1,13 @@
+.mainContainer {
+    width: 1200px;
+    max-width: 1200px;
+    overflow: hidden;
+    position: relative;
+    border: 1px solid rgba(255, 255, 255, 0.222);
+}
+
 .container {
-    height: 2000px;
+    height: fit-content;
     padding: 64px 24px;
 }
 
@@ -12,7 +20,7 @@
 
 .characterContainer {
     padding: 8px;
-    border: 1px solid grey;
+    background: rgba(128, 128, 128, 0.072);
     margin: 16px 0px;
 }
 
@@ -25,10 +33,16 @@
     color: grey;
 }
 
+.characterImage {
+    position: absolute;
+    top: -15%;
+}
+
 .equippeditem {
     display: flex;
     flex-direction: column;
     gap: 8px;
+    max-width: 400px;
 }
 
 .equippedItem {
