--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300;400;500;600;700&display=swap');
 
 * {
   font-family: 'Inter', sans-serif;
@@ -12,4 +13,5 @@ html {
 
 body {
   background: rgb(24, 26, 42);
+  height: 2000px;
 }
