--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -7,6 +7,7 @@
     right: 16px;
     left: 16px;
     z-index: 999;
+    background: linear-gradient(to bottom, rgb(24, 26, 42), rgb(24, 26, 42, 0.5));
 }
 
 .navcontainer {
@@ -19,8 +20,9 @@
     backdrop-filter: blur(8px);
     margin: 16px 16px 0px 16px;
     padding: 16px;
-    border-radius: 8px;
+    border-radius: 16px;
     box-shadow: rgba(0, 0, 0, 0.335) 0px 8px 20px 4px;
+    border: 1px solid rgba(255, 255, 255, 0.1);
 }
 
 .menuitems {
