--- a/src/styles/character.module.css
+++ b/src/styles/character.module.css
@@ -1,4 +1,7 @@
 .container {
+}
+
+.formContainer {
     padding: 16px;
 }
 
@@ -10,7 +13,6 @@
     background: rgba(0, 0, 0, 0.3);
     border-radius: 12px;
     padding: 16px;
-    margin: 16px;
     gap: 8px;
     border: 1px solid rgba(255, 255, 255, 0.1);
     box-shadow: rgba(0, 0, 0, 0.5) 0px 16px 16px -8px;
@@ -104,7 +106,6 @@
 }
 
 .equippeditem {
-    border: 1px solid greenyellow;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -164,7 +165,7 @@
 
 .popup {
     position: fixed;
-    z-index: 5;
+    z-index: 999;
     width: 200px;
     display: flex;
     flex-direction: column;
@@ -227,25 +228,69 @@ color: #A335EE; /* Epic item color */
 color: #FF8000; /* Legendary item color */
 }
 
-.charMetadata {
+.characterStatistics {
     display: flex;
     flex-direction: column;
-    border: 1px solid red;
     z-index: 5;
+    font-family: 'Chakra Petch', sans-serif;
+    font-size: 14px;
+    font-weight: 600;
     color: white;
+    height: max-content;
+    background: rgba(26, 27, 35, 0.7);
+    backdrop-filter: blur(8px);
+    padding: 16px;
+    border: 1px solid grey;
+    border-radius: 8px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 8px 16px 16px;
 }
 
 .achievementilvl {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    gap: 16px
+    gap: 16px;
+    font-size: 16px;
 }
 
-.charHealth {
+.healthPower {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    margin: 16px 0px;
+    width: 140px;
+}
+
+.characterHealth {
     background: green;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
+    padding: 4px 8px;
 }
 
-.charPower {
+.characterPower {
     background: rgb(0, 81, 255);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
+    padding: 4px 8px;
+}
+
+.characterAttributes {
+    display: flex;
+    flex-direction: column;
+}
+
+@media (max-width: 768px) {
+    .searchContainer {
+        flex-direction: column;
+    }
+
+    .characterStatistics {
+        display: none;
+    }
+
+    .character {
+        padding: 8px;
+    }
+
 }
