--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -29,7 +29,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 24px;
+    gap: 16px;
   }
   
   .menuitem {
@@ -48,6 +48,17 @@
     color: white;
     padding: 8px 32px;
     border: 0px;
+    border-radius: 8px;
+    text-transform: uppercase;
+  }
+
+  .menubutton2 {
+    border: 1px solid rgb(255, 58, 58);
+    font-size: 12px;
+    font-weight: 700;
+    letter-spacing: 1.4px;
+    color: white;
+    padding: 8px 32px;
     border-radius: 8px;
     text-transform: uppercase;
   }
