--- a/src/styles/character.module.css
+++ b/src/styles/character.module.css
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: row;
     width: fit-content;
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(103, 109, 155, 0.1);
     border-radius: 12px;
     padding: 16px;
     gap: 8px;
@@ -262,6 +262,7 @@ color: #FF8000; /* Legendary item color */
     gap: 8px;
     margin: 16px 0px;
     width: 200px;
+    text-align: center;
 }
 
 .characterHealth {
@@ -269,6 +270,9 @@ color: #FF8000; /* Legendary item color */
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
     padding: 4px 8px;
+    font-family: 'Chakra Petch', sans-serif;
+    font-size: 14px;
+    font-weight: 600;
 }
 
 .characterPower {
@@ -276,6 +280,9 @@ color: #FF8000; /* Legendary item color */
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
     padding: 4px 8px;
+    font-family: 'Chakra Petch', sans-serif;
+    font-size: 14px;
+    font-weight: 600;
 }
 
 .characterAttributes {
