--- a/src/styles/loginregister.module.css
+++ b/src/styles/loginregister.module.css
@@ -2,27 +2,28 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
-    width: 200px;
-    background: rgba(26, 27, 35, 0.7);
-    padding: 16px;
-    border: 1px solid grey;
+    background: rgba(103, 109, 155, 0.1);
+    padding: 24px;
+    border: 1px solid rgba(255, 255, 255, 0.1);
     border-radius: 16px;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 8px 16px 16px;
     color: white;
     font-size: 12px;
     margin-top: 32px;
+    width: fit-content;
 }
 
 .form {
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    width: 200px;
+    gap: 12px;
 }
 
 .formInput {
     padding: 8px;
     border: none;
-    border-radius: 4px;
+    border-radius: 8px;
 }
 
 .formButton {
@@ -35,4 +36,12 @@
     border: 0px;
     border-radius: 8px;
     text-transform: uppercase;
+}
+
+.error {
+    color: rgb(255, 58, 58);
+}
+
+@media (max-width: 768px) {
+
 }
