--- a/src/styles/posts.module.css
+++ b/src/styles/posts.module.css
@@ -1,43 +1,68 @@
 .postsContainer {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-    background: rgba(103, 109, 155, 0.1);
-    padding: 16px;
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    border-radius: 16px;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 8px 16px 8px;
-    color: white;
-    font-size: 12px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  background: rgba(103, 109, 155, 0.1);
+  padding: 16px;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 16px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 8px 16px 8px;
+  color: white;
+  font-size: 12px;
 }
 
 .post {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  background: rgba(103, 109, 155, 0.1);
+  padding: 16px;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 8px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 8px 16px 8px;
+  color: white;
+  font-size: 12px;
+}
+
+.postTitle {
+  font-family: 'Chakra Petch', sans-serif;
+  cursor: pointer;
+}
+
+.postCategory {
+  font-family: 'Chakra Petch', sans-serif;
+  text-transform: uppercase;
+  font-size: 8px;
+  font-weight: 500;
+  letter-spacing: 1.4px;
+  color: grey;
+}
+
+.postAuthor {
+  font-family: 'Chakra Petch', sans-serif;
+  color: rgb(0, 162, 255);
+}
+
+.modalOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  backdrop-filter: blur(8px);
+  z-index: 999;
+}
+
+.modalContent {
     background: rgba(103, 109, 155, 0.1);
+    border-radius: 8px;
+    width: 500px;
     padding: 16px;
     border: 1px solid rgba(255, 255, 255, 0.1);
     border-radius: 8px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 8px 16px 8px;
-    color: white;
-    font-size: 12px;
-}
-
-.postTitle {
-    font-family: 'Chakra Petch', sans-serif;
-}
-
-.postCategory {
-    font-family: 'Chakra Petch', sans-serif;
-    text-transform: uppercase;
-    font-size: 8px;
-    font-weight: 500;
-    letter-spacing: 1.4px;
-    color: grey;
-}
-
-.postAuthor {
-    font-family: 'Chakra Petch', sans-serif;
-    color: rgb(0, 162, 255);
 }
