--- a/src/styles/posts.module.css
+++ b/src/styles/posts.module.css
@@ -66,3 +66,12 @@
     border-radius: 8px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 8px 16px 8px;
 }
+
+.votesContainer {
+  border: 1px solid red;
+}
+
+.voteButton {
+  border: 1px solid blue;
+  padding: 8px;
+}
