--- a/src/styles/posts.module.css
+++ b/src/styles/posts.module.css
@@ -62,19 +62,29 @@
   align-items: center;
   backdrop-filter: blur(12px);
   z-index: 999;
+  overflow-y: auto;
 }
 
 .modalContent {
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
+    position: absolute;
+    top: 32px;
     background: rgba(103, 109, 155, 0.3);
     border-radius: 8px;
     width: 700px;
+    height: 600px;
     padding: 24px;
     border: 1px solid rgba(255, 255, 255, 0.1);
     border-radius: 8px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 8px 16px 8px;
+    overflow-y: auto;
+}
+
+.postContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  padding-bottom: 24px;
 }
 
 .modalHeader {
@@ -160,4 +170,21 @@
   cursor: pointer;
   font-family: 'Chakra Petch', sans-serif;
   font-size: 12px;
+}
+
+.commentsContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  padding-top: 24px;
+}
+
+.comment {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 8px;
+  padding: 16px;
+  background: rgba(103, 109, 155, 0.1);
 }
