--- a/src/styles/profile.module.css
+++ b/src/styles/profile.module.css
@@ -17,6 +17,12 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
+}
+
+.postContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
     background: rgba(103, 109, 155, 0.1);
     padding: 16px;
     border: 1px solid rgba(255, 255, 255, 0.1);
@@ -70,4 +76,8 @@
     text-transform: uppercase;
     text-decoration: none;
     cursor: pointer;
+  }
+
+  .h2Header {
+    font-family: 'Chakra Petch', sans-serif;
   }
