--- a/src/styles/posts.module.css
+++ b/src/styles/posts.module.css
@@ -56,7 +56,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -68,13 +68,12 @@
 .modalContent {
     position: absolute;
     top: 32px;
-    background: rgba(103, 109, 155, 0.3);
-    border-radius: 8px;
+    background: rgb(24, 26, 42);
+    border-radius: 16px;
     width: 700px;
     height: 600px;
-    padding: 24px;
+    padding: 40px;
     border: 1px solid rgba(255, 255, 255, 0.1);
-    border-radius: 8px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 8px 16px 8px;
     overflow-y: auto;
 }
@@ -95,7 +94,7 @@
 
 .modalPostTitle {
     font-family: 'Chakra Petch', sans-serif;
-    font-size: 24;
+    font-size: 18px;
 }
 
 .modalContentContainer {
@@ -231,4 +230,25 @@
   box-shadow: rgb(0, 162, 255) 0px 0px 32px -8px;
   width: 100%;
   color: white;
+}
+
+
+@media (max-width: 768px) {
+  .modalContent {
+    top: 64px;
+    width: 80%;
+  }
+
+  .commentForm {
+    flex-direction: column;
+  }
+
+  .commentButton {
+    width: 100%;
+  }
+
+  .commentInput {
+    box-sizing: border-box;
+    width: 100%;
+  }
 }
