--- a/src/styles/forum.module.css
+++ b/src/styles/forum.module.css
@@ -115,6 +115,7 @@
     text-align: center;
     border: 1px solid rgba(255, 255, 255, 0.1);
     cursor: pointer;
+    transition: 0.2s ease;
 }
 
 .category:hover {
@@ -124,6 +125,7 @@
 .activeCategory {
     border: 1px solid rgb(0, 162, 255);
     box-shadow: rgb(0, 162, 255, 0.4) 0px 0px 16px 0px;
+    background: rgba(103, 109, 155, 0.1);
 }
 
 @media (max-width: 768px) {
