--- a/src/styles/posts.module.css
+++ b/src/styles/posts.module.css
@@ -12,9 +12,6 @@
 }
 
 .post {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
   background: rgba(103, 109, 155, 0.1);
   padding: 16px;
   border: 1px solid rgba(255, 255, 255, 0.1);
@@ -23,7 +20,6 @@
   color: white;
   font-size: 12px;
   transition: 0.3s ease;
-  cursor: pointer;
 }
 
 .post:hover {
@@ -37,6 +33,7 @@
 
 .postTitle {
   font-family: 'Chakra Petch', sans-serif;
+  cursor: pointer;
 }
 
 .postCategory {
@@ -96,6 +93,51 @@
   gap: 24px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   padding-bottom: 24px;
+}
+
+.postLeftRight {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.postLeft {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  width: 100%;
+}
+
+.postRight {
+  display: flex;
+  flex-direction: row;
+  gap: 12px;
+  height: fit-content;
+  align-items: center;
+}
+
+.likeCount {
+  font-family: 'Chakra Petch', sans-serif;
+  font-size: 12px;
+}
+
+.likeButton {
+  background: none;
+  border: none;
+  outline: none;
+  color: white;
+  cursor: pointer;
+  transition: 0.2s ease;
+  height: 16px;
+}
+
+.liked {
+  border: none;
+  color: rgb(0, 162, 255);
+}
+
+.likeButton:active {
+  transform: scale(1.2);
 }
 
 .modalHeader {
@@ -222,6 +264,12 @@
   padding-top: 24px;
 }
 
+.commentContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .comment {
   display: flex;
   flex-direction: column;
@@ -230,6 +278,14 @@
   border-radius: 8px;
   padding: 16px;
   background: rgba(103, 109, 155, 0.1);
+}
+
+.commentLikes {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  height: fit-content;
+  align-items: center;
 }
 
 .modalCommentContent1 {
@@ -244,12 +300,11 @@
   color: white;
 }
 
-/* Add new CSS class for active category */
 .activeCategory {
   border: 1px solid rgb(0, 162, 255);
   box-shadow: rgb(0, 162, 255) 0px 0px 8px 0px;
-  /* Customize the styles for the active category */
 }
+
 
 @media (max-width: 768px) {
   .modalContent {
